--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -24,7 +24,7 @@
     <add key="AdminName" value="TotalHR Admin" />
     <add key="AdminEmail" value="admin@cyberminds.co.uk" />
     <add key="WebsiteName" value="TotalHR" />
-    <add key="RootURL" value="http://localhost:50698/" />
+    <add key="RootURL" value="http://totalhr.local/" /><!-- change this on live -->
     <add key="SMTPUsername" value="admin@cyberminds.co.uk" />
     <add key="SMTPServerName" value="mail.cyberminds.co.uk" />
     <add key="SMTPPass" value="diVWzXGcuHVsG1kU6xMKaL4kXFLA8hkOUtKPYNioI8Q=" />
