Added search for document management

--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -359,6 +359,7 @@
     <Content Include="Views\Document\CreateFolder.cshtml" />
     <Content Include="Views\Document\EditDocument.cshtml" />
     <Content Include="Views\Shared\_CompanyDocItemSelector.cshtml" />
+    <Content Include="Views\Shared\_DocumentSearch.cshtml" />
     <None Include="Web.AliceLaptop.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
