--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Models\CalendarEventReminder.cs" />
     <Compile Include="Models\DocumentInfo.cs" />
     <Compile Include="Models\DocumentSearchInfo.cs" />
+    <Compile Include="Models\DocumentShareInfo.cs" />
     <Compile Include="Models\EmailStruct.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="HttpCacheHelper.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Models\Attributes\AlwaysTrueAttribute.cs" />
     <Compile Include="Models\LoginStruct.cs" />
     <Compile Include="Models\NewUserInfo.cs" />
+    <Compile Include="Models\SimpleUser.cs" />
     <Compile Include="Models\UserPersonalInfo.cs" />
     <Compile Include="Models\UserRegStruct.cs" />
     <Compile Include="Models\SMTPSettings.cs" />
