added changes for Sharing docs

--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -361,6 +361,7 @@
     <Content Include="Views\Shared\_CompanyDocItemSelector.cshtml" />
     <Content Include="Views\Shared\_DocumentSearch.cshtml" />
     <Content Include="Views\Document\Share.cshtml" />
+    <Content Include="Views\Document\ShareComplete.cshtml" />
     <None Include="Web.AliceLaptop.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
