DB Project update

--- a/totalhr.admin/Web.config
+++ b/totalhr.admin/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-totalhr.admin-20140609073938;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-totalhr.admin-20140609073938.mdf" />
+    <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIVYA-PC\SQLEXPRESS;initial catalog=TotalHR;persist security info=True;user id=sa;password=rajesh;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="data source=DIVYA-PC\SQLEXPRESS;initial catalog=TotalHR;persist security info=True;user id=sa;password=rajesh;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
