--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,5 +9,6 @@
   <repository path="..\totalhr.services.Test\packages.config" />
   <repository path="..\totalhr.services\packages.config" />
   <repository path="..\totalhr.tests.libs\packages.config" />
+  <repository path="..\totalhr.Unit.Test\packages.config" />
   <repository path="..\totalhr.web\packages.config" />
 </repositories>
