More changes on admin

--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnumExtensions.cs" />
+    <Compile Include="Models\AdminProfileStruct.cs" />
     <Compile Include="Models\AdminStruct.cs" />
     <Compile Include="Models\CalendarEventCache.cs" />
     <Compile Include="Models\CalendarEventInfo.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="HttpCacheHelper.cs" />
     <Compile Include="Infrastructure\ICacheHelper.cs" />
     <Compile Include="Models\Attributes\AlwaysTrueAttribute.cs" />
+    <Compile Include="Models\ListItemStruct.cs" />
     <Compile Include="Models\LoginStruct.cs" />
     <Compile Include="Models\NewUserInfo.cs" />
     <Compile Include="Models\SimpleUser.cs" />
