--- a/totalhr.Unit.Test/totalhr.Unit.Test.csproj
+++ b/totalhr.Unit.Test/totalhr.Unit.Test.csproj
@@ -16,6 +16,8 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,6 +66,26 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Authentication\Authentication.csproj">
+      <Project>{ed4d8ec1-24a9-4e53-9d27-9cfd86aaa6cf}</Project>
+      <Name>Authentication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\totalhr.service.messaging\totalhr.services.messaging.csproj">
+      <Project>{8219decc-2439-4be9-a5b2-167a5b70cdf0}</Project>
+      <Name>totalhr.services.messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\totalhr.services\totalhr.services.csproj">
+      <Project>{e80cd858-bba6-4650-8475-9987337e3ea8}</Project>
+      <Name>totalhr.services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\totalhr.Shared\totalhr.Shared.csproj">
+      <Project>{1af1abb5-66b8-4e3f-a5aa-12025159514f}</Project>
+      <Name>totalhr.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\totalhr.tests.libs\totalhr.tests.libs.csproj">
+      <Project>{ff5c3573-33f2-4ca3-bfc1-ab33561253b5}</Project>
+      <Name>totalhr.tests.libs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\totalhr.web\totalhr.web.csproj">
       <Project>{e171e95d-6c8c-443e-b121-5f40882d6863}</Project>
       <Name>totalhr.web</Name>
@@ -89,6 +111,7 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
