--- a/totalhr.services/totalhr.services.csproj
+++ b/totalhr.services/totalhr.services.csproj
@@ -98,9 +98,11 @@
     <Compile Include="Implementation\AccountService.cs" />
     <Compile Include="Implementation\CompanyService.cs" />
     <Compile Include="Implementation\GlossaryService.cs" />
+    <Compile Include="Implementation\ProfileService.cs" />
     <Compile Include="Infrastructure\ICompanyService.cs" />
     <Compile Include="Infrastructure\IAccountService.cs" />
     <Compile Include="Infrastructure\IGlossaryService.cs" />
+    <Compile Include="Infrastructure\IProfileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
