--- a/totalhr.services/totalhr.services.csproj
+++ b/totalhr.services/totalhr.services.csproj
@@ -99,10 +99,12 @@
     <Compile Include="Implementation\CompanyService.cs" />
     <Compile Include="Implementation\GlossaryService.cs" />
     <Compile Include="Implementation\TimeRecordingServices.cs" />
+    <Compile Include="Infrastructure\ITimeRecordingServices.cs" />
+    <Compile Include="Implementation\ProfileService.cs" />
     <Compile Include="Infrastructure\ICompanyService.cs" />
     <Compile Include="Infrastructure\IAccountService.cs" />
     <Compile Include="Infrastructure\IGlossaryService.cs" />
-    <Compile Include="Infrastructure\ITimeRecordingServices.cs" />
+    <Compile Include="Infrastructure\IProfileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
