--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\CalendarService\packages.config" />
   <repository path="..\Common\packages.config" />
   <repository path="..\totalhr.admin\packages.config" />
+  <repository path="..\totalhr.data.TimeRecording\packages.config" />
   <repository path="..\totalhr.data\packages.config" />
   <repository path="..\totalhr.dummydata\packages.config" />
   <repository path="..\totalhr.service.messaging\packages.config" />
@@ -11,4 +12,5 @@
   <repository path="..\totalhr.services\packages.config" />
   <repository path="..\totalhr.tests.libs\packages.config" />
   <repository path="..\totalhr.web\packages.config" />
+  <repository path="..\ttoalhr.data.TimeRecording\packages.config" />
 </repositories>
