--- a/totalhr.services/totalhr.services.csproj
+++ b/totalhr.services/totalhr.services.csproj
@@ -101,10 +101,12 @@
     <Compile Include="Implementation\TimeRecordingServices.cs" />
     <Compile Include="Infrastructure\ITimeRecordingServices.cs" />
     <Compile Include="Implementation\ProfileService.cs" />
+    <Compile Include="Implementation\RoleService.cs" />
     <Compile Include="Infrastructure\ICompanyService.cs" />
     <Compile Include="Infrastructure\IAccountService.cs" />
     <Compile Include="Infrastructure\IGlossaryService.cs" />
     <Compile Include="Infrastructure\IProfileService.cs" />
+    <Compile Include="Infrastructure\IRoleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
