--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -158,7 +158,10 @@
     <Compile Include="Areas\Admin\Controllers\ProfileController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoleController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
+    <Compile Include="Areas\Admin\Helpers\GenericHelper.cs" />
     <Compile Include="Areas\Admin\Helpers\ProfileHelper.cs" />
+    <Compile Include="Areas\Admin\Helpers\UserHelper.cs" />
+    <Compile Include="Areas\Admin\Models\UserSearchResult.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Admin\AdminBaseController.cs" />
     <Compile Include="Controllers\Admin\AdminHomeController.cs" />
@@ -304,6 +307,8 @@
     <Content Include="Areas\Admin\Views\Role\ViewUsers.cshtml" />
     <Content Include="Areas\Admin\Views\User\Index.cshtml" />
     <Content Include="Areas\Admin\Views\User\UserDetails.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_UserSearch.cshtml" />
+    <Content Include="Areas\Admin\Models\Views\User\SearchResult.cshtml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\date.js" />
     <Content Include="Scripts\jquery-1.11.0.min.js" />
@@ -393,7 +398,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="bin\Database\" />
     <Folder Include="CompanyDocuments\" />
     <Folder Include="Users\Profile\Images\" />
