--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -300,21 +300,22 @@
     <Content Include="Content\themes\jquery-ui.theme.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Areas\Admin\Models\Views\Web.config" />
-    <Content Include="Areas\Admin\Models\Views\Home\Index.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Account\Login.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Shared\_AdminLayout.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Profile\Index.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Profile\ManageUserProfiles.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Profile\ViewUsers.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Role\Index.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Role\ManageUserRoles.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Role\ViewUsers.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\User\Index.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\User\UserDetails.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\Shared\_UserSearch.cshtml" />
-    <Content Include="Areas\Admin\Models\Views\User\SearchResult.cshtml" />
+    <Content Include="Areas\Admin\Views\Web.config" />
+    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_AdminLayout.cshtml" />
+    <Content Include="Areas\Admin\Views\Profile\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\Profile\ManageUserProfiles.cshtml" />
+    <Content Include="Areas\Admin\Views\Profile\ViewUsers.cshtml" />
+    <Content Include="Areas\Admin\Views\Role\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Role\ManageUserRoles.cshtml" />
+    <Content Include="Areas\Admin\Views\Role\ViewUsers.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\User\UserDetails.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_UserSearch.cshtml" />
+    <Content Include="Areas\Admin\Views\User\SearchResult.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_UserList.cshtml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\date.js" />
     <Content Include="Scripts\jquery-1.11.0.min.js" />
