More work on user management

--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -31,6 +31,7 @@
     <add key="SMTPPass" value="diVWzXGcuHVsG1kU6xMKaL4kXFLA8hkOUtKPYNioI8Q=" />
     <add key ="MaxFileUploadContent" />
     <add key="LoginDuration" value="30" />
+    <add key="DefaultPageSize" value="5" />
   </appSettings>
   <log4net>
     <root>
