Task Scheduler initial repositories

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\CalendarService\packages.config" />
   <repository path="..\Common\packages.config" />
   <repository path="..\totalhr.admin\packages.config" />
+  <repository path="..\totalhr.data.TaskScheduler\packages.config" />
   <repository path="..\totalhr.data.TimeRecordingSystem\packages.config" />
   <repository path="..\totalhr.data\packages.config" />
   <repository path="..\totalhr.dummydata\packages.config" />
