--- a/totalhr.services/totalhr.services.csproj
+++ b/totalhr.services/totalhr.services.csproj
@@ -98,8 +98,8 @@
     <Compile Include="Implementation\AccountService.cs" />
     <Compile Include="Implementation\CompanyService.cs" />
     <Compile Include="Implementation\GlossaryService.cs" />
+    <Compile Include="Implementation\TaskSchedulerService.cs" />
     <Compile Include="Implementation\TimeRecordingServices.cs" />
-    <Compile Include="Infrastructure\ITimeRecordingServices.cs" />
     <Compile Include="Implementation\ProfileService.cs" />
     <Compile Include="Implementation\RoleService.cs" />
     <Compile Include="Infrastructure\ICompanyService.cs" />
